2017-05-08  Oliver Lemke  <olemke@core-dump.info>

	* doc/_static/increased_width.css:

	Increase width to prevent plots from being scaled down.

2017-05-05  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py:

	* (channels): Fixed handling of second offset.

	Now correctly used around the position of the first passband.

	* (HectoPascalFormatter): Simplified implementation.

	Replaced the `partial` solution with an explicit function.
	This also allows a proper docstring.

	* (profile_p): Fixed docstring description (report by Oliver).

2017-05-05  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py (channels):

	Function to plot instrument channels for passband-type sensors.

	* doc/typhon.plots.rst: Include `typhon.plots.channels`.

2017-05-04  Gerrit Holl  <g.holl@reading.ca.uk>

	* typhon/datasets/_tovs_defs.py:
	
	- Some bugfixes, HIRS2 processing might work soon.

	* typhon/datasets/tovs.py(HIRS.as_xarray_dataset):

	- Add attributes to coordinates as well as data variables.

2017-05-04  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py (HectoPascalFormatter):

	Implemented a workaround to make the Formatter callable. This
	ensures consistent usage with other formatters.

	* typhon/utils/__init__.py (image2mpeg):

	Raise an exception if the `ffmpeg` subprocess fails.

	* typhon/utils/tests/test_utils.py:

	Test the behaviour of `test_utils` when no input is found.

2017-05-03  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Replace fill values by the standard NetCDF ones, except for floats
	and doubles, where we keep nan.  This is for within the FIDUCEO
	project.

	- Added data vars props for HIRS2.  I think processing HIRS2 now
	works again.

	- Renamed hrs_satloc for HIRS2, instead extract directly with height
	and lza.

	* typhon/datasets/dataset.py(HomemadeDataset.find_granule_for_time):

	- When estimating filename, pass on information for any attributes,